PM-971 Fixed PostePay Onboarding
